# Cadre-Management-System

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: cadre.db
src-tauri/src/: database.rs  export.rs  filter.rs  lib.rs  main.rs
src-tauri/templates/: 中层管理人员名册.xls  中层管理人员名册.xlsx  基层管理人员名册.xlsx
src/components/: CadreForm.vue  ExportConfig.vue  Footer.vue  Layout.vue
src/views/: CadreListView.vue  GrassrootsCadreListView.vue  GrassrootsTenureView.vue  MidLevelCadreListView.vue  MidlevelStatisticsView.vue  MidlevelTenureView.vue  StatisticsView.vue
